<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <!--MASSAGE TO USER-->
    <string name="msgYouTurn">Is your turn, select one</string>
    <string name="msgComputerTurn">It\'s Android\'s Turn.</string>
    <string name="msgTie">It\'s a Tie!</string>
    <string name="msgWinUser">You Won!</string>
    <string name="msgWinComputer">Android Won!, Game Over</string>
    <string name="lblScore">The current Score:</string>
    <string name="lblHumanScore">Human:0</string>
    <string name="lblTiesScore">Ties:0</string>
    <string name="lblAndroidScore">Android:0</string>
    <string name="msgAbout">Choose from one of three difficulty levels. Dont\'t let the Android beat you</string>


    <!--AUXILIARY-->
    <string name="playerChar">X</string>
    <string name="computerChar">O</string>

    <!--LABELS MENU-->
    <string name="lblNewGame">New Game</string>
    <string name="lblDifficulty">Difficulty</string>
    <string name="lblReset">Reset Game</string>
    <string name="lblExit">Exit</string>
    <string name="lblAbout">About</string>

    <!--MSG DIALOG-->
    <string name="lblTitleCloseApp">"Are you sure you want to quit?"</string>
    <string name="titleDifficulty">Choose a difficulty level:</string>
    <string name="lblEasy">Easy</string>
    <string name="lblHarder">Harder</string>
    <string name="lblExpert">Expert</string>


    <!--BTNS-->
    <string name="btnOk">OK</string>



</resources>